force-app/main/default/objects/Student_Registered__e/Student_Registered__e.object-meta.xml
<CustomObject>
    <label>Student Registered</label>
    <pluralLabel>Student Registered Events</pluralLabel>
</CustomObject>