force-app/main/default/objects/Student_Registered__e/fields/ContactId__c.field-meta.xml
<CustomField>
    <fullName>ContactId__c</fullName>
    <label>Contact Id</label>
    <length>18</length>
    <type>Text</type>
</CustomField>