force-app/main/default/objects/Student_Registered__e/fields/CorrelationId__c.field-meta.xml
<CustomField>
    <fullName>CorrelationId__c</fullName>
    <label>Correlation Id</label>
    <length>36</length>
    <type>Text</type>
</CustomField>