force-app/main/default/objects/Student_Registered__e/fields/EventTimestamp__c.field-meta.xml
<CustomField>
    <fullName>EventTimestamp__c</fullName>
    <label>Event Timestamp</label>
    <type>DateTime</type>
</CustomField>