force-app/main/default/objects/Student_Registered__e/fields/PayloadJson__c.field-meta.xml
<CustomField>
    <fullName>PayloadJson__c</fullName>
    <label>Payload Json</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>